--- a/public/index.html
+++ b/public/index.html
@@ -203,12 +203,12 @@
 <a href="http://localhost:1313/blog/20240925/"><div
   class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
   
-  <img id="thumb" alt="Pipeline Network Modeling of Low-Temperature Water Systems Based on FloTides" class="aspect-video object-cover w-auto lg:h-44"
+  <img id="thumb" alt="Low-Temperature Water Systems Based on FloTides" class="aspect-video object-cover w-auto lg:h-44"
     src="/img/blog/20240925.png" />
   
   <div
     class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 relative pl-4 p-6 justify-between leading-normal max-w-full w-full">
-    <div class="text-gray-900 font-bold text-xl mb-2">Pipeline Network Modeling of Low-Temperature Water Systems Based on FloTides</div>
+    <div class="text-gray-900 font-bold text-xl mb-2">Low-Temperature Water Systems Based on FloTides</div>
     <p class="text-gray-700 text-base pb-5">FloTides (abbreviated as FT) is a software independently developed by Tai Ze Technology, focusing on the modeling, simulation, ...</p>
     <p class="text-sm text-gray-600 items-center">
       <time>2024/09/25</time>
@@ -219,12 +219,12 @@
 <a href="http://localhost:1313/blog/20240925-2/"><div
   class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
   
-  <img id="thumb" alt="Generalized Fluid-Structure Integrated Design, Simulation, and Optimization System OpTides" class="aspect-video object-cover w-auto lg:h-44"
+  <img id="thumb" alt="Generalized Design, Simulation, and Optimization System OpTides" class="aspect-video object-cover w-auto lg:h-44"
     src="/img/blog/20240925-2.png" />
   
   <div
     class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 relative pl-4 p-6 justify-between leading-normal max-w-full w-full">
-    <div class="text-gray-900 font-bold text-xl mb-2">Generalized Fluid-Structure Integrated Design, Simulation, and Optimization System OpTides</div>
+    <div class="text-gray-900 font-bold text-xl mb-2">Generalized Design, Simulation, and Optimization System OpTides</div>
     <p class="text-gray-700 text-base pb-5">On April 23, 2023, a day before the grand opening of the 8th “China Space Day,” a Fatigue/Crack Propagation Analysi...</p>
     <p class="text-sm text-gray-600 items-center">
       <time>2024/09/25</time>
