update products page ect

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -212,7 +212,10 @@
 
   <div class="about-image-bg">
     
-    <img src="https://fanxgg.github.io/TurboTides/img/about/company1.jpg" alt="Company Image" class="big-image">
+    <picture>
+      <source srcset="https://fanxgg.github.io/TurboTides/img/about/company1.webp" type="image/webp">
+      <img src="https://fanxgg.github.io/TurboTides/img/about/company1.jpg" alt="Company Image" class="big-image">
+    </picture>
   </div> 
 
 <div class="about-text-container">
