--- a/public/products/products-turbotides/index.html
+++ b/public/products/products-turbotides/index.html
@@ -433,7 +433,7 @@
         </div>
         <aside id="meta">
             <div class="flex justify-center">
-                <a class="back-button lg:text-2xl" href="https://fanxgg.github.io/TurboTides/products/">
+                <a class="back-button lg:text-2xl" href="javascript:history.back()">
                     <div style="background-color: #1f2937; color: #d1d5db;" class="transition-colors duration-300 h-auto m-3 text-center py-3 px-6 lg:py-1">
                         <span class="icon-keyboard_arrow_left"></span> Return
                     </div>
