--- a/public/about-taize/index.html
+++ b/public/about-taize/index.html
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>https://fanxgg.github.io/TurboTides/about/</title>
-    <link rel="canonical" href="https://fanxgg.github.io/TurboTides/about/">
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://fanxgg.github.io/TurboTides/about/">
-  </head>
-</html>
+<!doctype html><html lang=en><head><title>https://www.turbotides.com/about/</title>
+<link rel=canonical href=https://www.turbotides.com/about/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://www.turbotides.com/about/"></head></html>
